hacky shit-fuckery for papers new chunksystem und refactor